# rustouhou

./: .editorconfig  Cargo.toml  characters.yml  titles.yml
src/: main.rs  schema.rs
src/schema/: characters.rs  titles.rs
